<package>

  <!-- NOTE: This is a catkin package.xml file to support optional building in
       a catkin workspace, but is not required to build gazebo. For more
       information, see: http://ros.org/reps/rep-0134.html -->

  <name>gazebo</name>
  <version>0.0.0</version>
  <description>
    This is the Gazebo simulator.  Gazebo simulates multiple robots in a
    3D environment, with extensive dynamic interaction between objects. 
  </description>
  <license>Apache2</license>
  <author>Open Source Robotics Foundation</author>

  <maintainer email="nate@osrfoundation.org">Nate Koenig</maintainer>
  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>

  <url>http://gazebosim.org/</url>
  
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>

